# ann-rs

./: .gitignore  Cargo.toml  README.md
examples/: mlp.rs  xor.rs
examples/mnist/: main.rs
src/: functions.rs  lib.rs  network.rs  network_builder.rs  utils.rs
src/activators/: elu.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/layers/: mod.rs
src/network/: mod.rs
src/network/layer/: mod.rs
src/objectives/: binary_cross_entropy.rs  cross_entropy.rs  mean_square_error.rs  mod.rs
src/optimizers/: adam.rs  mod.rs  sgd.rs
